fix: fix bug with scroll on mobile device when menu is opened

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -67,6 +67,7 @@
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
